<resources>
    <string name="app_name">Terminals</string>

    <string name="direction_order_title">Заказ №</string>
    <string name="direction_order_title_not_found">Заказ не найден</string>
    <string name="direction_button_save">Сохранить</string>
    <string name="direction_from_title">Откуда:</string>
    <string name="direction_to_title">Куда:</string>
    <string name="direction_no_name">терминал не выбран.</string>
    <string name="direction_no_address">Нажмите, чтобы выбрать терминал из списка доступных.</string>

    <string-array name="orderStatus">
        <item>черновик</item>
        <item>обработка</item>
        <item>перевозка</item>
        <item>закрыто</item>
        <item>неизвестно</item>
    </string-array>

    <string name="terminal_from_title">Откуда</string>
    <string name="terminal_to_title">Куда</string>

    <string name="terminal_item_map">Месторасположение терминала на карте</string>
    <string name="terminal_item_name">Название терминала:</string>
    <string name="terminal_item_address">Адрес терминала:</string>
    <string name="terminal_item_workHours">График работы:</string>
    <string name="terminal_item_distance">Удаленность от пользователя:</string>
    <string name="terminal_item_no_workHours">нет данных</string>
    <string name="terminal_item_distance_postfix">\ км</string>

    <string name="menu_search_icon">Поиск терминала по названию</string>
    <string name="menu_search_filter_icon">Выберете фильтр</string>

    <string name="menu_order_drop_data">Сбросить данные</string>
    <string name="menu_order_drop_data_result">Данные о терминалах удалены</string>

    <string name="menu_terminal_filter_sort_title">Сортировка</string>
    <string name="menu_terminal_filter_sort_name">По названию</string>
    <string name="menu_terminal_filter_sort_distance">По расстоянию</string>

</resources>