<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/terminalFilterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/menu_terminal_filter_sort_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="Сортировка" />

    <TextView
        android:id="@+id/terminalFilterByName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/menu_terminal_filter_sort_name"
        android:textColor="@color/black"
        tools:text="По названию" />

    <TextView
        android:id="@+id/terminalFilterByDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:text="@string/menu_terminal_filter_sort_distance"
        android:textColor="@color/black"
        tools:text="По расстоянию" />

</LinearLayout>