<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="terminal"
            type="com.vbogd.terminals.domain.model.Terminal" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/white"
        android:padding="8dp">

        <TextView
            android:id="@+id/terminalNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terminal_item_name"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/terminalName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{ terminal.name }"
            app:layout_constraintEnd_toStartOf="@id/barrierMap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terminalNameTitle"
            tools:text="Санкт-Петербург ППВЗ Мурино Петровский " />

        <TextView
            android:id="@+id/terminalAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/terminal_item_address"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terminalName" />

        <TextView
            android:id="@+id/terminalAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{ terminal.address }"
            app:layout_constraintEnd_toEndOf="@id/barrierMap"
            app:layout_constraintStart_toStartOf="@id/terminalAddressTitle"
            app:layout_constraintTop_toBottomOf="@id/terminalAddressTitle"
            tools:text="1-й Верхний пер, дом № 12, Литера Б" />

        <TextView
            android:id="@+id/terminalWorkHoursTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/terminal_item_workHours"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terminalAddress" />

        <TextView
            android:id="@+id/terminalWorkHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/barrierMap"
            app:layout_constraintStart_toStartOf="@id/terminalWorkHoursTitle"
            app:layout_constraintTop_toBottomOf="@id/terminalWorkHoursTitle"
            app:workHours="@{ terminal }"
            tools:text="пн: 08:00-00:00; вт-пт: круглосуточно; сб: 00:00-20:00; вс: 09:00-20:00" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="start"
            app:constraint_referenced_ids="terminalMap" />

        <ImageView
            android:id="@+id/terminalMap"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/terminal_item_map"
            android:src="@drawable/ic_outline_image_placeholder_24"
            app:imageUrl="@{ terminal }"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierMap"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/distanceFromUserTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:distance="@{ terminal }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terminalMap"
            tools:text="654 км" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>